--- a/rivuletCloud/mainPanel/templates/mainPanel/base.html
+++ b/rivuletCloud/mainPanel/templates/mainPanel/base.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
     <link rel="stylesheet" type="text/css" href="{% static 'mainPanel/style.css' %}">
     <link href='https://fonts.googleapis.com/css?family=Satisfy' rel="stylesheet" type="text/css">
+{#    <link href="{% static 'mainPanel/dropzone.css' %}" type="text/css" rel="stylesheet"/>#}
 {#    <script type="text/javascript" src="{% static 'mainPanel/uploadFile.js' %}"></script>#}
+{#    <script src="{% static 'mainPanel/dropzone.js' %}"></script>#}
     <script src="'https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
