--- a/rivuletCloud/mainPanel/templates/mainPanel/historytask_form.html
+++ b/rivuletCloud/mainPanel/templates/mainPanel/historytask_form.html
@@ -14,12 +14,12 @@
                                 <div class="col-sm-offset-2 col-sm-10">
                                     <span class="text-danger small">{{ field.errors }}</span>
                                 </div>
-                                <label class="control-label col-sm-2">{{ field.label_tag }}</label>
+                                <span class="control-label col-sm-2">{{ field.label_tag }}</span>
                                 <div class="col-sm-10">{{ field }}</div>
                             </div>
                         {% endfor %}
                         <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10">
+                            <div class="col-sm-offset-3 col-sm-10">
                             <button type="submit" class="btn btn-success">Submit</button>
                             </div>
                         </div>
