--- a/rivuletServer/login/templates/login.html
+++ b/rivuletServer/login/templates/login.html
@@ -5,13 +5,13 @@
     <title>Sign-Up/Login Form</title>
       {% load staticfiles %}
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
-    
+
 
       <link href="{% static 'css/normalize.css' %}" type="text/css" rel="stylesheet"/>
-      <link href="{% static 'css/style.css' %}" type="text/css" rel="stylesheet"/>
+      <link href="{% static 'css/login.css' %}" type="text/css" rel="stylesheet"/>
 
-    
-    
+
+
     
   </head>
 
