--- a/rivuletServer/main/static/css/dropzone.css
+++ b/rivuletServer/main/static/css/dropzone.css
@@ -177,7 +177,13 @@
   min-height: 150px;
   border: 2px solid rgba(0, 0, 0, 0.3);
   background: white;
-  padding: 20px 20px; }
+  padding: 20px 20px;
+    border-radius: 30px;
+     font-size: 2rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+}
   .dropzone.dz-clickable {
     cursor: pointer; }
     .dropzone.dz-clickable * {
