--- a/rivuletServer/main/templates/main/base.html
+++ b/rivuletServer/main/templates/main/base.html
@@ -47,16 +47,16 @@
                         </li>
 
                     </ul>
-                    <form class="navbar-form navbar-left" role="search">
-                        <div class="form-group">
-                            <div class="input-group">
-                                <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
-                                <input type="text" class="form-control" placeholder="Search">
-                            </div>
-
-                        </div>
-                        <button type="submit" class="btn btn-default">Submit</button>
-                    </form>
+{#                    <form class="navbar-form navbar-left" role="search">#}
+{#                        <div class="form-group">#}
+{#                            <div class="input-group">#}
+{#                                <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>#}
+{#                                <input type="text" class="form-control" placeholder="Search">#}
+{#                            </div>#}
+{##}
+{#                        </div>#}
+{#                        <button type="submit" class="btn btn-default">Submit</button>#}
+{#                    </form>#}
 
                     <ul class="nav navbar-nav navbar-right">
                         <li><p class="navbar-text"><span class="label label-primary"><span class="glyphicon glyphicon-user"></span> {{ user.username }}</span></p></li>
