--- a/rivuletServer/main/templates/main/upload.html
+++ b/rivuletServer/main/templates/main/upload.html
@@ -107,7 +107,7 @@
                     maxFilesize: 4096,
                     // Prevents Dropzone from uploading dropped files immediately
                     autoProcessQueue : false,
-                    acceptedFiles: ".tif",
+                    acceptedFiles: ".tif, .v3d",
 
                     init : function() {
                         var submitButton = document.querySelector("#submit-all")
