--- a/rivuletServer/main/templates/main/task.html
+++ b/rivuletServer/main/templates/main/task.html
@@ -15,7 +15,7 @@
                                     <div id="drop_area">Preview</div>
                                 </div>
                                 <div>
-                                    <label for="fileselect">Files to process:</label>
+                                    <label for="fileselect">Select Files to process:</label>
                                     <select multiple id="files" name="files[]" form="new_task">
                                         {% for file in all_files %}
                                             <option value="{{ file }}">{{ file }}</option>
@@ -69,39 +69,50 @@
 
                     </form>
                 </div>
+
+
+                {% if all_tasks %}
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="preview_section">
                             <div class="table_panel">
                                 <form id="download" name="download" action=""  method="POST" enctype="multipart/form-data">
                                     {% csrf_token %}
-                                    <table class="table table-hover" cellspacing="0" width="100%" bgcolor="white"  >
-                                         <thead>
-                                            <tr>
-                                                <th><input type="checkbox" onclick="checkAll(this)"></th>
-                                                <th>File Name</th>
-                                                <th>Output File Name</th>
-                                                <th>Status</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
 
-                                                {% for task in all_tasks %}
+
+                                            <table class="table table-hover" align="center"  id="task_table" cellspacing="0" width="100%" bgcolor="white"  >
+                                                 <thead>
                                                     <tr>
-                                                        <td><input type="checkbox" onclick="check_getRow(this)" name="{{ task.outfile_location }}" value="{{ task.outfile_location }}"/></th>
-                                                        <td  onclick="getRow(this)">{{ task.filename }}</td>
-                                                        <td  onclick="getRow(this)">{{ task.outfile_name }}</td>
-                                                        {% if task.status == "QUEUING" %}
-                                                            <td  onclick="getRow(this)"><span class="label label-warning">{{ task.status }}</span></td>
-                                                        {% elif task.status == "FINISHED"%}
-                                                            <td  onclick="getRow(this)"><span class="label label-success">{{ task.status }}</span></td>
-                                                        {% endif  %}
+                                                        <th class="box"><input type="checkbox" onclick="checkAll(this)"></th>
+                                                        <th class="filename">File Name</th>
+                                                        <th class="outfile">Output File Name</th>
+                                                        <th align="left" class="status">Status</th>
                                                     </tr>
-                                                {% endfor %}
+                                                </thead>
+                                                <tbody>
+                                                        {% for task in all_tasks %}
+                                                            <tr>
+                                                                {% if task.status == "FINISHED"%}
+                                                                    <td class="box"><input type="checkbox" onclick="check_getRow(this)" name="{{ task.outfile_location }}" value="{{ task.outfile_location }}"/></th>
+                                                                    <td class="filename" onclick="getRow(this)">{{ task.filename }}</td>
+                                                                    <td class="outfile" onclick="getRow(this)">{{ task.outfile_name }}</td>
+                                                                    <td align="left" class="status" onclick="getRow(this)"><span class="label label-success">{{ task.status }}</span></td>
 
-                                        </tbody>
+                                                                {% else %}
+                                                                    <td class="box"><input type="checkbox"  disabled readonly/></th>
+                                                                    <td class="filename">{{ task.filename }}</td>
+                                                                    <td class="outfile">{{ task.outfile_name }}</td>
+                                                                    <td class="status"><span class="label label-warning">{{ task.status }}</span></td>
 
-                                    </table>
+                                                                {% endif %}
+
+                                                            </tr>
+                                                        {% endfor %}
+
+                                                </tbody>
+
+                                            </table>
+
                                     <div class="row">
                                         <div class="col-lg-offset-7 col-lg-4">
                                             <button type="submit" name="download_button" class="btn btn-success" >download</button>
@@ -112,59 +123,108 @@
                         </div>
                     </div>
                 </div>
+            {% endif %}
 
             </div>
             <script type="text/javascript">
-                function check_getRow(td) {
-                    if (td.checked == false){
-                         td.checked = true
-                     }
-                     else{
-                         td.checked = false
-                     }
-                    var row = td.parentNode.parentNode;
-                    console.log("========", row.nodeName)
-                    if(row.style.backgroundColor == "lightgrey"){
-                        row.style.backgroundColor = "white"
-                    }
-                    else{
-                        row.style.backgroundColor = "lightgrey"
-                    }
-                    var checkboxes = row.getElementsByTagName("input")
+                window.onload=function()
+                {
+                   var checkboxes = document.getElementsByTagName('input'), val = null;
                      for (var i = 0; i < checkboxes.length; i++)
                      {
-                         if (checkboxes[i].checked == false){
-                             checkboxes[i].checked = true
+                         if (checkboxes[i].type == 'checkbox')
+                         {
+                             if (val === null) val = checkboxes[i].checked;
+                             checkboxes[i].checked = val;
                          }
-                         else{
-                             checkboxes[i].checked = false
-                         }
-
-
                      }
+                }
+
+                function check_getRow(td) {
+                    var row = td.parentNode.parentNode;
+                    var queuing = false
+{#                    console.log("========ok", row.nodeName)#}
+                    if (row.nodeName == "TR"){
+                        var cells = row.getElementsByTagName("span")
+                         for (var i = 0; i < cells.length; i++) {
+{#                             console.log(cells[i].innerHTML)#}
+                             if (cells[i].innerHTML == "QUEUING"){
+                                queuing = true
+                            }
+                        }
+                    }
+                    if (queuing){
+                        alert("This task is not available yet...")
+                        td.checked = false
+                    }
+                    else{
+                        if (td.checked == false){
+                            td.checked = true
+                        }
+                        else{
+                             td.checked = false
+                        }
+                        var row = td.parentNode.parentNode;
+                        console.log("========", row.nodeName)
+                        if(row.style.backgroundColor == "lightgrey"){
+                            row.style.backgroundColor = "white"
+                        }
+                        else{
+                            row.style.backgroundColor = "lightgrey"
+                        }
+                        var checkboxes = row.getElementsByTagName("input")
+                        for (var i = 0; i < checkboxes.length; i++)
+                        {
+                             if (checkboxes[i].checked == false){
+                                 checkboxes[i].checked = true
+                             }
+                             else{
+                                 checkboxes[i].checked = false
+                             }
+                        }
+                    }
 
                 }
                 function getRow(td) {
                     var row = td.parentNode;
                     console.log("========", row.nodeName)
-                    if(row.style.backgroundColor == "lightgrey"){
-                        row.style.backgroundColor = "white"
+                    var queuing = false
+                    if (row.nodeName == "TR"){
+                        var cells = row.getElementsByTagName("span")
+                         for (var i = 0; i < cells.length; i++) {
+                             console.log(cells[i].innerHTML)
+                             if (cells[i].innerHTML == "QUEUING"){
+                                queuing = true
+                            }
+                        }
+                    }
+
+                    if (queuing){
+                        alert("This task is not available yet...")
                     }
                     else{
-                        row.style.backgroundColor = "lightgrey"
+                        if(row.style.backgroundColor == "lightgrey"){
+                        row.style.backgroundColor = "white"
+                        }
+                        else{
+                            row.style.backgroundColor = "lightgrey"
+                        }
+                        var checkboxes = row.getElementsByTagName("input")
+                         for (var i = 0; i < checkboxes.length; i++)
+                         {
+                             if (checkboxes[i].checked == false){
+                                 checkboxes[i].checked = true
+                             }
+                             else{
+                                 checkboxes[i].checked = false
+                             }
+
+
+                         }
+
                     }
-                    var checkboxes = row.getElementsByTagName("input")
-                     for (var i = 0; i < checkboxes.length; i++)
-                     {
-                         if (checkboxes[i].checked == false){
-                             checkboxes[i].checked = true
-                         }
-                         else{
-                             checkboxes[i].checked = false
-                         }
 
 
-                     }
 
 
 
@@ -185,15 +245,22 @@
 
 
                     var rows = document.getElementsByTagName('tr')
-                    console.log(select_all.checked)
                     if (select_all.checked == true){
                         for (var i = 1; i < rows.length; i++){
+                            var queuing = false
+                            var status_td = rows[i].getElementsByTagName("span")
+                                 console.log(status_td[0].innerHTML)
+                                 if (status_td[0].innerHTML == "FINISHED"){
+                                    queuing = true
+                            }
+                            if(queuing){
                                 rows[i].style.backgroundColor = "lightgrey"
+                            }
                         }
                     }
                     else{
                         for (var i = 1; i < rows.length; i++){
-                                rows[i].style.backgroundColor = "white"
+                            rows[i].style.backgroundColor = "white"
                         }
                     }
 
