--- a/rivuletServer/main/templates/main/upload.html
+++ b/rivuletServer/main/templates/main/upload.html
@@ -42,11 +42,6 @@
                                 <span class="glyphicon glyphicon-open" aria-hidden="true"></span>&nbsp;Upload file
                             </a>
                         </li>
-                        <li class="">
-                            <a href="#">
-                                <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>&nbsp;History
-                            </a>
-                        </li>
 
                     </ul>
 {#                    <form class="navbar-form navbar-left" role="search">#}
@@ -108,6 +103,8 @@
                     // Prevents Dropzone from uploading dropped files immediately
                     autoProcessQueue : false,
                     acceptedFiles: ".tif, .v3d",
+                    maxFiles: 5,
+                    parallelUploads: 5,
 
                     init : function() {
                         var submitButton = document.querySelector("#submit-all")
