--- a/rivuletServer/main/static/css/style.css
+++ b/rivuletServer/main/static/css/style.css
@@ -23,6 +23,27 @@ a:hover {
 .table_panel {
     border-radius: 20px;
 }
+.table_panel #delete_button{
+    border: 0;
+  outline: none;
+  border-radius: 0;
+  padding: 15px 50px;  margin: 10px 3px 10px 0px;
+  font-size: 2rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  background: darkred;
+  color: #ffffff;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  -webkit-appearance: none;
+    border-radius: 30px;
+}
+
+.table_panel #delete_button:hover, #delete_button:focus{
+    background: indianred;
+
+}
 .navbar-brand{
     font-family: 'Satisfy',cursive;
     font-size: 2rem;
@@ -41,6 +62,28 @@ a:hover {
   box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
     text-align: center;
 }
+.panel_section button{
+    width: 100%;
+    border: 0;
+  outline: none;
+  border-radius: 0;
+  padding: 15px 50px;  margin: 40px 3px 40px 0px;
+  font-size: 2rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  background: #194481;
+  color: #ffffff;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  -webkit-appearance: none;
+    border-radius: 30px;
+}
+
+.panel_section button:hover, button:focus{
+    background: #4682b4;
+}
+
 
 
 
@@ -138,6 +181,11 @@ a:hover {
     border-radius: 40px;
 
 }
+
+.preview_section .input-group{
+    margin:0px 0px 0px 50px;
+
+}
 .preview_section label{
     color: white;
     font-size: 2rem;
@@ -145,7 +193,18 @@ a:hover {
   text-transform: uppercase;
   letter-spacing: .1em;
     padding: 10px 5px 10px 0px;
+    /*margin: 0px 0px 20px 0px;*/
 }
+
+.preview_section label span{
+    color: white;
+    font-size: 2.5rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+    padding: 10px 10px 10px 10px;
+}
+
 .preview_section select{
     font-size: 1.5rem;
     font-weight: 600;
@@ -155,6 +214,7 @@ a:hover {
     padding: 5px;"
      background: #444444 0px 0px;
 }
+
 .preview_section span{
     font-size: 1.5rem;
     font-weight: 600;
@@ -237,6 +297,18 @@ a:hover {
   -webkit-appearance: none;
     border-radius: 5px;
     color: black;
+}
+
+.table_button_group #delete_raw_file_button{
+    background: darkred;
+    margin: 0px 20px 10px 20px;
+    padding: 6px 20px;
+}
+.table_button_group #checkbox_text{
+    color:white;
+    font-size: 1.5rem;
+  font-weight: 600;
+    margin: auto 5px;
 }
 
 .table_button_group button:hover, button:focus{
@@ -364,4 +436,100 @@ a:hover {
     color: #4682b4;
     background-color: #194481;
   }
+}
+
+
+.container_radio{
+  margin: 0px 0px 0px 100px;
+}
+
+.container_radio ul{
+  /*list-style: none;*/
+  height: 50%;
+  width: 50%;
+  margin: 0;
+  padding: 0;
+}
+
+
+
+.container_radio ul li{
+  color: #AAAAAA;
+  display: block;
+  position: relative;
+  float: left;
+  width: 50%;
+  height: 50%;
+	/*border-bottom: 1px solid #111111;*/
+    /*margin:0px 0px 0px 20px;*/
+    text-align: center;
+}
+
+.container_radio ul li input[type=radio]{
+  position: absolute;
+  visibility: hidden;
+}
+
+.container_radio ul li label{
+  display: block;
+  position: relative;
+  font-weight: 100;
+  font-size: 1.35em;
+  padding: 25px 25px 25px 60px;
+  margin: 8px auto;
+  height: 30px;
+  z-index: 9;
+  cursor: pointer;
+  -webkit-transition: all 0.25s linear;
+    /*text-align: right;*/
+}
+
+.container_radio ul li:hover label{
+	color: #FFFFFF;
+}
+
+.container_radio ul li .check{
+  display: block;
+  position: absolute;
+  border: 5px solid #AAAAAA;
+  border-radius: 100%;
+  height: 31px;
+  width: 31px;
+  top: 30px;
+  left: 20px;
+	z-index: 5;
+	transition: border .25s linear;
+	-webkit-transition: border .25s linear;
+    /*margin:auto 30px;*/
+}
+
+.container_radio ul li:hover .check {
+  border: 5px solid #FFFFFF;
+}
+
+.container_radio ul li .check::before {
+  display: block;
+  position: absolute;
+	content: '';
+  border-radius: 100%;
+  height: 15px;
+  width: 15px;
+  top: 3px;
+	left: 3px;
+  margin: auto;
+	transition: background 0.25s linear;
+	-webkit-transition: background 0.25s linear;
+
+}
+
+.container_radio input[type=radio]:checked ~ .check {
+  border: 5px solid #0DFF92;
+}
+
+.container_radio input[type=radio]:checked ~ .check::before{
+  background: #0DFF92;
+}
+
+.container_radio input[type=radio]:checked ~ label{
+  color: #0DFF92;
 }
