--- a/rivuletServer/main/templates/main/base.html
+++ b/rivuletServer/main/templates/main/base.html
@@ -9,10 +9,14 @@
         <link href='https://fonts.googleapis.com/css?family=Satisfy' rel="stylesheet" type="text/css">
         <link href="{% static 'css/normalize.css' %}" type="text/css" rel="stylesheet"/>
         <link href="{% static 'css/style.css' %}" type="text/css" rel="stylesheet"/>
+        <link href="{% static 'css/sweetalert.css' %}" type="text/css" rel="stylesheet"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <script src="{% static 'js/jquery-latest.js' %}"></script>
         <script src="{% static 'js/jquery.tablesorter.js' %}"></script>
+        <script src="{% static 'js/dropzone.js' %}"></script>
+    <script src="{% static 'js/sweetalert.min.js' %}"></script>
+
 </head>
 <body>
     <!-- nav section-->
